--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd ./config/prod.env node ./dist/index.js",
-    "heroku-postbuild": "babel src --out-dir dist --copy-files",
-    "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
+    "start": "env-cmd ./prisma/config/prod.env node ./prisma/dist/index.js",
+    "heroku-postbuild": "babel prisma/src --out-dir prisma/dist --copy-files",
+    "dev": "env-cmd ./prisma/config/dev.env nodemon ./prisma/src/index.js --ext js,graphql --exec babel-node",
     "get-schema": "graphql get-schema -p prisma"
   },
   "keywords": [],
