Extract jwt secret to env variable

--- a/config/prod.env
+++ b/config/prod.env
@@ -1,2 +1,3 @@
 PRISMA_ENDPOINT=https://ltroya-blogging-app.herokuapp.com/ltroya-blogging-app/prod
 PRISMA_SECRET=5415lhfgadghhsdf3g
+JWT_SECRET=fh4567ghfhgfhdfdh
