--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd ./config/dev.env nodemon ./src/index.js --ext js,graphql --exec babel-node",
     "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env",
-    "test": "jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "env-cmd": "^8.0.2",
     "graphql-cli": "^2.16.4",
@@ -28,5 +29,9 @@
   "devDependencies": {
     "jest": "^23.5.0",
     "nodemon": "^1.18.4"
+  },
+  "jest": {
+    "globalSetup": "./tests/jest/globalSetup.js",
+    "globalTeardown": "./tests/jest/globalTeardown.js"
   }
 }
