Fix test suite Add local configuration

--- a/config/test.env
+++ b/config/test.env
@@ -1,3 +1,4 @@
 PRISMA_ENDPOINT=http://localhost:4466/default/test
 PRISMA_SECRET=SUPER_SECRET_VALUE
 JWT_SECRET=SUPER_SECRET_VALUE
+PRISMA_MANAGEMENT_API_SECRET=mysecret42
