--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,3 +1,4 @@
 endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: http://localhost:4466/prisma/dev
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
